loader.sh - don't log Guice warning; log loader.log and update.log to both file and stdout